# human-benchmark

./: .gitignore  Cargo.toml  README.md  package.json  svelte.config.js
src/: app.css  app.html  main.rs  tasks.rs  utils.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/game/: aim_training.rs  colors.rs  mod.rs  number_memory.rs  reaction_time.rs  typing.rs
src-tauri/src/js_console_scripts/: aim-trainer.js  reaction-time.js  typing-test.js  verbal.js
src-tauri/src/ocr/: .gitignore  download_models.bat  engine.rs
src-tauri/src/screen/: utils.rs
src/lib/components/app-navigator/: navigator-normal.svelte  navigator-xs.svelte  navigatorData.svelte.ts
src/lib/components/app-statusbar/: index.ts  statusbar.svelte
src/lib/components/app-titlebar/: titlebar.svelte
src/lib/icons/: iconNodes.ts  index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/aim-trainer/: +page.svelte
src/routes/number-memory/: +page.svelte
src/routes/reaction-time/: +page.svelte
src/routes/typing/: +page.svelte
src/tasks/: aim_trainer.rs  js_AimTrainer.txt  js_inject.rs  mouse_pos_tracker.rs  reaction_time.rs  sequence_memory.rs  typing_test.rs  verbal_memory.rs
