[package]
name = "human-benchmark-bot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
screenshots = "0.8.4"
enigo = "0.1.3"
image = "0.24.7"
regex = "1.9.6"
open = "5.0.0"
leptonica-sys = "0.4.6"
tesseract-sys = "0.6.0"