[package]
name = "human-benchmark-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
screenshots = "0.8.4"
enigo = "0.1.3"
image = "0.24.7"
regex = "1.9.6"
open = "5.0.0"
leptonica-sys = "0.4.6"
tesseract-sys = "0.6.0"