[package]
name = "human-benchmark"
version = "0.1.0"
description = "Crush all the human benchmark tests"
authors = ["Cody Nhan Pham <contact@codynhanpham.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "human_benchmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
enigo = "0.6.1"
image = "0.25.8"
ocrs = "0.11.0"
rten = "0.22.0"
rten-imageproc = "0.22.0"
rten-tensor = "0.22.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.7.1"


[target.'cfg(target_os = "windows")'.dependencies]
simulate = "0.3.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"


# Even for dev builds, especially the ocrs crates needs to be optimized for performance
# Not sure why targeting individual packages such as [profile.dev.package."ocrs"]
# and [profile.dev.package."rten-imageproc"] is not working, so
# for now, we just optimize everything
[profile.dev.package."*"]
opt-level = 3
